<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="androidLargeFourVM" type="com.classkr.app.modules.androidlargefour.data.viewmodel.AndroidLargeFourVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearAndroidLarge"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <FrameLayout android:gravity="start"
            android:id="@+id/frameStackvecteezytechno"
            android:layout_height="match_parent" android:layout_width="match_parent">
            <ImageView android:id="@+id/imageVecteezytechno"
                android:layout_gravity="start"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_vecteezytechno}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_vecteezytechno"/>
            <LinearLayout android:id="@+id/linearColumnrectanglesixteen"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16pxv"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="match_parent" android:orientation="vertical">
                <FrameLayout
                    android:id="@+id/frameStackrectanglesixteen"
                    android:layout_height="@dimen/_66pxv" android:layout_width="match_parent">
                    <View android:background="@color/indigo_A700"
                        android:id="@+id/viewRectangleSixteen"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_65pxh"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_1pxv" android:layout_width="@dimen/_65pxh"/>
                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbarToolbar"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_width="match_parent"
                        app:contentInsetStart="0dp" style="@style/groupStylelight_blue_100">
                        <LinearLayout android:id="@+id/linearRowmenu"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent" android:orientation="horizontal">
                            <ImageView android:id="@+id/imageMenu"
                                android:layout_height="@dimen/_30pxh"
                                android:layout_marginBottom="@dimen/_1pxv"
                                android:layout_marginTop="@dimen/_9pxv"
                                android:layout_width="@dimen/_33pxh"
                                android:scaleType="fitXY"
                                android:src="@drawable/img_menu"
                                tools:ignore="ContentDescription" tools:src="@drawable/img_menu"/>
                            <LinearLayout
                                android:id="@+id/linearRowsearch"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_197pxh"
                                android:layout_weight="0.74"
                                android:layout_width="0dp" android:orientation="horizontal">
                                <ImageView android:id="@+id/imageSearch"
                                    android:layout_height="@dimen/_39pxh"
                                    android:layout_marginBottom="@dimen/_2pxv"
                                    android:layout_width="@dimen/_39pxh"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/img_search"
                                    tools:ignore="ContentDescription" tools:src="@drawable/img_search"/>
                                <ImageView android:id="@+id/imageUser"
                                    android:layout_height="@dimen/_41pxh"
                                    android:layout_marginStart="@dimen/_17pxh"
                                    android:layout_width="@dimen/_37pxh"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/img_user"
                                    tools:ignore="ContentDescription" tools:src="@drawable/img_user"/>
                            </LinearLayout>
                        </LinearLayout>
                    </androidx.appcompat.widget.Toolbar>
                </FrameLayout>
                <LinearLayout android:gravity="center_horizontal"
                    android:id="@+id/linearColumnstudentregistr"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_44pxv"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStyleblack_900">
                    <TextView android:gravity="center_horizontal"
                        android:id="@+id/txtStudentRegistr"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/_13pxv"
                        android:layout_marginEnd="@dimen/_76pxh"
                        android:layout_marginStart="@dimen/_81pxh"
                        android:layout_marginTop="@dimen/_12pxv"
                        android:layout_width="match_parent"
                        android:text="@{androidLargeFourVM.androidLargeFourModel.txtStudentRegistr}"
                        style="@style/txtInterbold20_1" tools:text="@string/msg_student_registr2"/>
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnClassSchedulingOne"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_25pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_25pxv"
                    android:singleLine="true"
                    android:text="@string/msg_class_schedulin"
                    android:textAllCaps="false"
                    style="@style/btnSolid_1" tools:text="@string/msg_class_schedulin"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnStudentRecordManagement"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_25pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_25pxv"
                    android:singleLine="true"
                    android:text="@string/msg_student_record"
                    android:textAllCaps="false"
                    style="@style/btnSolid_1" tools:text="@string/msg_student_record"/>
                <LinearLayout android:gravity="center_horizontal"
                    android:id="@+id/linearColumnstaffandfacul"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStyleblack_900">
                    <TextView android:gravity="center_horizontal"
                        android:id="@+id/txtStaffandFacul"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/_13pxv"
                        android:layout_marginEnd="@dimen/_95pxh"
                        android:layout_marginStart="@dimen/_95pxh"
                        android:layout_marginTop="@dimen/_12pxv"
                        android:layout_width="match_parent"
                        android:text="@{androidLargeFourVM.androidLargeFourModel.txtStaffandFacul}"
                        style="@style/txtInterbold20_1" tools:text="@string/msg_staff_and_facul"/>
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnEvaluation"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_25pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_25pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_evaluation"
                    android:textAllCaps="false"
                    style="@style/btnSolid_1" tools:text="@string/lbl_evaluation"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnStudentFeedbackOne"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_25pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_25pxv"
                    android:singleLine="true"
                    android:text="@string/msg_student_feedbac"
                    android:textAllCaps="false"
                    style="@style/btnSolid_1" tools:text="@string/msg_student_feedbac"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnHelp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_25pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_25pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_help"
                    android:textAllCaps="false"
                    style="@style/btnSolid_1" tools:text="@string/lbl_help"/>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>
