<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="androidLargeElevenVM" type="com.classkr.app.modules.androidlargeeleven.data.viewmodel.AndroidLargeElevenVM"/>
    </data>
    <FrameLayout android:id="@+id/frameAndroidLarge"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageVecteezytechno"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_vecteezytechno}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_vecteezytechno"/>
        <LinearLayout android:id="@+id/linearColumnrectanglesixteen"
            android:layout_gravity="top|start"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16pxv"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <FrameLayout android:id="@+id/frameStackrectanglesixteen"
                android:layout_height="@dimen/_141pxv" android:layout_width="match_parent">
                <View android:background="@color/indigo_A700"
                    android:id="@+id/viewRectangleSixteen"
                    android:layout_gravity="top|start"
                    android:layout_height="@dimen/_65pxh"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_1pxv" android:layout_width="@dimen/_65pxh"/>
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarToolbar"
                    android:layout_gravity="top|start"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_width="match_parent"
                    app:contentInsetStart="0dp" style="@style/groupStylelight_blue_100">
                    <LinearLayout android:id="@+id/linearRowmenu"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <ImageView android:id="@+id/imageMenu"
                            android:layout_height="@dimen/_30pxh"
                            android:layout_marginBottom="@dimen/_1pxv"
                            android:layout_marginTop="@dimen/_9pxv"
                            android:layout_width="@dimen/_33pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_menu"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_menu"/>
                        <LinearLayout android:id="@+id/linearRowsearch"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_197pxh"
                            android:layout_weight="0.74"
                            android:layout_width="0dp" android:orientation="horizontal">
                            <ImageView android:id="@+id/imageSearch"
                                android:layout_height="@dimen/_39pxh"
                                android:layout_marginBottom="@dimen/_2pxv"
                                android:layout_width="@dimen/_39pxh"
                                android:scaleType="fitXY"
                                android:src="@drawable/img_search"
                                tools:ignore="ContentDescription" tools:src="@drawable/img_search"/>
                            <ImageView android:id="@+id/imageUser"
                                android:layout_height="@dimen/_41pxh"
                                android:layout_marginStart="@dimen/_17pxh"
                                android:layout_width="@dimen/_37pxh"
                                android:scaleType="fitXY"
                                android:src="@drawable/img_user"
                                tools:ignore="ContentDescription" tools:src="@drawable/img_user"/>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.appcompat.widget.Toolbar>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnHelp"
                    android:layout_gravity="bottom|start"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_24pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_24pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_help"
                    android:textAllCaps="false"
                    style="@style/btnSolid_1" tools:text="@string/lbl_help"/>
            </FrameLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumnforfurtherdet"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_58pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStyleyellow_A400cornerRadius">
                <TextView android:gravity="center_horizontal"
                    android:id="@+id/txtForFurtherDet"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:layout_marginEnd="@dimen/_71pxh"
                    android:layout_marginStart="@dimen/_72pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="match_parent"
                    android:text="@{androidLargeElevenVM.androidLargeElevenModel.txtForFurtherDet}"
                    style="@style/txtInterbold16_1" tools:text="@string/msg_for_further_det"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnMobNo916370662019"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_18pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_18pxv"
                android:singleLine="true"
                android:text="@string/msg_mob_no_91_6"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_4" tools:text="@string/msg_mob_no_91_6"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnEmailIdRohithas12031994gmailcom"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_18pxv"
                android:paddingEnd="@dimen/_17pxh"
                android:paddingStart="@dimen/_18pxh"
                android:paddingTop="@dimen/_18pxv"
                android:singleLine="true"
                android:text="@string/msg_e_mail_id_roh"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_4" tools:text="@string/msg_e_mail_id_roh"/>
        </LinearLayout>
    </FrameLayout>
</layout>
