<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="androidLargeThreeVM" type="com.classkr.app.modules.androidlargethree.data.viewmodel.AndroidLargeThreeVM"/>
    </data>
    <FrameLayout android:id="@+id/frameAndroidLarge"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageVecteezytechno"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_vecteezytechno}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_vecteezytechno"/>
        <LinearLayout android:id="@+id/linearColumnmenu"
            android:layout_gravity="top|start"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16pxv"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar android:gravity="start"
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:contentInsetStart="0dp" style="@style/groupStylelight_blue_100">
                <LinearLayout android:id="@+id/linearRowmenu"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_12pxv"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageMenu"
                        android:layout_height="@dimen/_30pxh"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_9pxv"
                        android:layout_width="@dimen/_33pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_menu"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_menu"/>
                    <LinearLayout android:id="@+id/linearRowsearch"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_197pxh"
                        android:layout_weight="0.74"
                        android:layout_width="0dp" android:orientation="horizontal">
                        <ImageView android:id="@+id/imageSearch"
                            android:layout_height="@dimen/_39pxh"
                            android:layout_marginBottom="@dimen/_2pxv"
                            android:layout_width="@dimen/_39pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_search"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_search"/>
                        <ImageView android:id="@+id/imageUser"
                            android:layout_height="@dimen/_41pxh"
                            android:layout_marginStart="@dimen/_17pxh"
                            android:layout_width="@dimen/_37pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_user"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_user"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <FrameLayout android:id="@+id/frameStackundrawlivepho"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_220pxv"
                android:layout_marginEnd="@dimen/_25pxh"
                android:layout_marginStart="@dimen/_25pxh"
                android:layout_marginTop="@dimen/_46pxv"
                android:layout_width="@dimen/_220pxh" style="@style/groupStylelime_500cornerRadius">
                <ImageView android:id="@+id/imageUndrawlivepho"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_163pxh"
                    android:layout_marginBottom="@dimen/_32pxv"
                    android:layout_marginEnd="@dimen/_17pxh"
                    android:layout_marginStart="@dimen/_9pxh"
                    android:layout_marginTop="@dimen/_25pxv"
                    android:layout_width="@dimen/_194pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_undrawlivepho"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_undrawlivepho"/>
            </FrameLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtRohitKhanna"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_25pxh"
                android:layout_marginStart="@dimen/_25pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{androidLargeThreeVM.androidLargeThreeModel.txtRohitKhanna}"
                style="@style/txtInterbold20" tools:text="@string/lbl_rohit_khanna"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnViewProfile"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_25pxh"
                android:layout_marginStart="@dimen/_25pxh"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_21pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_21pxv"
                android:singleLine="true"
                android:text="@string/lbl_view_profile"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl_view_profile"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtGroupFiftyOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_25pxh"
                android:layout_marginStart="@dimen/_25pxh"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_28pxv"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_13pxv"
                android:singleLine="true"
                android:text="@{androidLargeThreeVM.androidLargeThreeModel.txtGroupFiftyOne}"
                style="@style/txtSolidRounded" tools:text="@string/msg_check_class_sch"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnStudentRegistration"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_25pxh"
                android:layout_marginStart="@dimen/_25pxh"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_21pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_21pxv"
                android:singleLine="true"
                android:text="@string/msg_student_registr"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/msg_student_registr"/>
        </LinearLayout>
    </FrameLayout>
</layout>
